Scrollbar fixed with less gutter size.

--- a/style.css
+++ b/style.css
@@ -25,6 +25,6 @@ nav {
 #floating-div {
     position: absolute;
     color: white;
-    top: -28px;
+    top: -23px;
     right: 8%;
 }
